--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta property="og:title" content="விஷ்ணுபீடியா">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
-<meta name="description" content="விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை அழகாக காணலாம்.">
+<meta name="description" content="விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை காணலாம்.">
 <meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
 <meta property="og:image:type" content="image/jpeg">  
 <meta property="og:image:width" content="1080">
