--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   "@type": "WebSite",
   "name": "விஷ்ணுபீடியா",
   "url": "https://vishnupedia.github.io/tamil/",
-  "description": "விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை அழகாக காணலாம்.",
+  "description": "விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை காணலாம்.",
   "publisher": {"@type": "Person", "name": "ராஜ் விஷ்ணு குமார்"}
 }
 </script>
