--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@ table.FRIEND {margin: 0; border-spacing: 0;}
 
 
 /*HEADINGS AND PARAGRAPHS__________________________________*/
+h1 { position: absolute; left: -9999px;}
+h2 { position: absolute; left: -9999px;}
 .h1 { text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); font-size: 45px; font-family: "Copperplate Gothic", "Copperplate Gothic Bold", sans-serif; background-color: #ff1f1f; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px;}
 .h12 { text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); font-size: 45px; font-family: "Copperplate Gothic", "Copperplate Gothic Bold", sans-serif; background-color: #5271FF; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px;}
 .h13 { text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); font-size: 45px; font-family: "Copperplate Gothic", "Copperplate Gothic Bold", sans-serif; background-color: #00c559; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px;}
@@ -422,6 +424,8 @@ table.FRIEND {margin: 0; border-spacing: 0;}
 
 @media (max-width: 950px) 
 {
+h1 { position: absolute; left: -9999px;}
+h2 { position: absolute; left: -9999px;}
 .h1 { text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); font-size: 18px; font-family: 'Times New Roman', Times, serif; background-color: #ff1f1f; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px;}
 .h12 { text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); font-size: 18px; font-family: 'Times New Roman', Times, serif; background-color: #5271FF; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px;}
 .h13 { text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); font-size: 18px; font-family: 'Times New Roman', Times, serif; background-color: #00c559; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px;}
@@ -492,6 +496,9 @@ table.FRIEND {margin: 0; border-spacing: 0;}
   
 <br>
 <br>
+
+<h1>விஷ்ணுபீடியா என்பது ராஜ். விஷ்ணு குமார் அவர்களின் சிறு வாழ்க்கை வரலாறு ஆகும், இதில் அவரின் வாழ்க்கை பயணம், திறன்கள், கல்வி, அனுபவம், காலவரிசை மற்றும் விருப்பங்கள் பற்றிய விவரங்கள் இடம்பெறுகின்றன.</h1>
+<h2> RVK Adventurer என்கிற ராஜ் விஷ்ணு குமார் கோயம்புத்தூரில் பிறந்த இயற்கை விரும்பி ஆவார். பயணம் செல்வதும், புதிய இடங்களை காண்பதும், பைக் சவாரி, கலைநயமிக்க விசயங்களை உருவாக்குவதும், புகைப்படங்கள் மூலம் நினைவுகளை சேகரிப்பதும் இவரின் மனம் கவரும் விஷயங்கள்.</h2>
 
 <center>
 <ul class="GENINFO">
