--- a/career.html
+++ b/career.html
@@ -186,6 +186,8 @@ table.FULL {width: 100%; max-width: 100%; border-collapse:separate; border-spaci
 .FULL td { width: 33%; border: 2px solid #e8e8e8; box-shadow: 0 0 8px rgba(0, 0, 0, 0.1); border-radius: 5px; vertical-align: top;}
 .FULL tr {padding: 10px; }
 .FULL td.A2:hover {  box-shadow: 0 0 20px #9fb0ff; transform: scale(1.02);  cursor: pointer;}
+h1 { position: absolute; left: -9999px;}
+h2 { position: absolute; left: -9999px;}
 .h21 {  font-weight: bolder; font-size: 30px; font-family: "Copperplate Gothic", "Copperplate Gothic Bold", sans-serif; background-color: #5271FF; color: white; -webkit-text-stroke: 1px #ffffff;  display: inline-block; padding: 5px; -webkit-text-stroke: 1px #ffffff; color: #ffffff;}
 .h22 {  font-weight: bolder; font-size: 25px;  font-family: "Copperplate Gothic", "Copperplate Gothic Bold", sans-serif; display: inline-block; padding: 5px; -webkit-text-stroke: 1px #5271FF; color: #5271FF; font-weight: bolder; }
 .h23 { font-size: 20px; font-weight: bolder; color: #5271FF; font-family: "Copperplate Gothic", "Copperplate Gothic Bold", sans-serif; max-width: 100%; overflow-wrap: break-word; word-wrap: break-word; box-sizing: border-box; white-space: normal; line-height: 1; -webkit-text-stroke: 0.5px #5271FF; }
@@ -199,6 +201,8 @@ table.FULL {width: 100%; max-width: 100%; border-collapse:separate; border-spaci
 table.FULL {border-spacing: 10px;}
 .FULL td {width: 100%; display: block; box-sizing: border-box; margin-bottom: 20px; }
 .FULL tr {display: block; margin-bottom: 2px; padding: 2px; }
+h1 { position: absolute; left: -9999px;}
+h2 { position: absolute; left: -9999px;}
 .h21 { font-family: 'Times New Roman', Times, serif; font-size: 17px; padding: 3px; text-transform: uppercase;}
 .h22 {font-family: 'Times New Roman', Times, serif; font-size: 15px; padding: 3px; text-transform: uppercase;}
 .h23 {font-size: 13.5px; font-family: 'Times New Roman', Times, serif; text-transform: uppercase; font-weight: bolder;}
@@ -248,7 +252,7 @@ table.FULL {border-spacing: 10px;}
 <header>
 
 <div class="logo">
-<img src="TAMILLOGOS/VISHNUPEDIA.jpg" alt="Logo" draggable="false" >
+<img src="TAMILLOGOS/VISHNUPEDIA.jpg" alt="விஷ்ணுபீடியா Logo" draggable="false" >
 </div>
 
 <nav>
@@ -270,46 +274,32 @@ table.FULL {border-spacing: 10px;}
 <main>
 
 <div class="header-images">
-<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" alt="RVK, Raj. Vishnu Kumar, RVK Adventurer, Vishnupedia, Vishnu Kumar, விஷ்ணு குமார், விஷ்ணுபீடியா" style="filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.9));" draggable="false" >
+<img class="HIMG" src="TAMILLOGOS/RVKTAMIL.gif" alt="Raj. Vishnu Kumar" style="filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.9));" draggable="false" >
 </div>
 
 <div class="tabcontainer">
-<button id="defaultOpen" class="tablink tablink-full" onclick="openPage('FULLTIME', this)"><b><img class="BUTTON" src="TABBUTTONICONS/FULLTIMEJOB.gif" draggable="false" width="40px" height="40px"> <br> முழு நேர வேலை அனுபவம்</b></button>
-<button class="tablink tablink-part" onclick="openPage('PARTTIME', this)"><img class="BUTTON" src="TABBUTTONICONS/PARTTIMEJOB.gif" draggable="false" width="40px" height="40px"> <br>  <b>பகுதிநேர வேலை அனுபவம் </b></button>
+<button id="defaultOpen" class="tablink tablink-full" onclick="openPage('FULLTIME', this)"><b><img class="BUTTON" src="TABBUTTONICONS/FULLTIMEJOB.gif" alt="Full Time Job" draggable="false" width="40px" height="40px"> <br> முழு நேர வேலை அனுபவம்</b></button>
+<button class="tablink tablink-part" onclick="openPage('PARTTIME', this)"><img class="BUTTON" src="TABBUTTONICONS/PARTTIMEJOB.gif" alt="Part Time Job" draggable="false" width="40px" height="40px"> <br>  <b>பகுதிநேர வேலை அனுபவம் </b></button>
 </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<h1>Vishnupedia is Raj. Vishnu Kumar’s micro-biography, highlighting his journey, skills, education, experience, timeline and favorites.</h1>
+<h2>Raj Vishnu Kumar (AKA) RVK Adventurer is a Coimbatore-born nature lover who enjoys traveling, exploring new places, bike riding, creating visually appealing content and capturing memories through photography.</h2>
 
 
 
 <div id="FULLTIME" class="tabcontent">
 
-<img class="TABICON" src="TABS/OFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/OFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: right;"><br><br><br>
+<img class="TABICON" src="TABS/OFFICIALJOB.gif" alt="Professional Job Experience" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/OFFICIALJOB.gif" alt="Professional Job Experience" draggable="false" width="140px" height="140px" style="float: right;"><br><br><br>
 &nbsp;&nbsp;<center><h class="h11"><b>என் &nbsp;முழு &nbsp;நேர &nbsp;வேலை &nbsp;அனுபவம்</b></h></center>&nbsp;&nbsp;
 
 
 <br>
 <br>
 <center>
-<img src="JOB EXPERIENCE/SEMICON.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/SEMICON.png" alt="Circuit Digest - Semicon Media" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> SEMICON&nbsp;MEDIA </h><br>
 <h class="h22"><b> உள்ளடக்க எழுத்தாளர் / பத்திரிகையாளர்  </b></h><br>
 <p class="h23"> அக்டோபர் &nbsp;2024 &nbsp;- &nbsp;மே &nbsp;2025 </p><br>
@@ -322,14 +312,15 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS/CONTENTWRITING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/DESIGNING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/WEBCONT.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/LEADGEN.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/MARKETING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/COMPETITORANALYSIS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/PRODANALYSIS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/MARKETANALYSIS.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/CONTENTWRITING.gif" alt="CONTENTWRITING " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/DESIGNING.gif" alt="DESIGNING " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/WEBCONT.gif" alt="WEBSITE CONTENT WRITING " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/LEADGEN.gif" alt="LEAD GENERATION " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MARKETING.gif" alt="DIGITAL MARKETING " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/COMPETITORANALYSIS.gif" alt="COMPETITOR ANALYSIS " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRODANALYSIS.gif" alt="PRODUCT ANALYSIS " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MARKETANALYSIS.gif" alt="MARKET ANALYSIS " draggable="false" height="150px" width="150px" >
+
 </div>
 </div>
     
@@ -459,7 +450,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE/VTG.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/VTG.png" alt="Virtual Tech Gurus" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> ZENfra&nbsp;-&nbsp;Virtual&nbsp;Tech&nbsp;Gurus </h><br>
 <h class="h22"><b> தரவு &nbsp;மற்றும் &nbsp;வணிக &nbsp;பகுப்பாய்வாளர்</b></h><br>
 <p class="h23"> ஏப்ரல் &nbsp;2023 &nbsp;- &nbsp;ஆகஸ்ட் &nbsp;2024 </p><br>
@@ -472,19 +463,19 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS/DATACLEANSING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/MARKETANALYSIS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/WEBMANAGE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/CONTENTWRITING.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/DOCUMENTATION.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/TESTING.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS/EXCEL.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/INTERNETDATAFETCH.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/LEADGEN.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/VIDEOCREATE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/COMPETITORANALYSIS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/PACKAGEMANAGE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/PRODANALYSIS.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/DATACLEANSING.gif" alt="Data Cleansing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MARKETANALYSIS.gif" alt="Market Analysis " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/WEBMANAGE.gif" alt="Website Management " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/CONTENTWRITING.gif" alt="Content Writing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/DOCUMENTATION.gif" alt="Documentation " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/TESTING.gif" alt="Quality Analysis " draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/EXCEL.gif" alt="Data Analysis " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/INTERNETDATAFETCH.gif" alt="Data Fetching " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/LEADGEN.gif" alt="Lead Generation " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/VIDEOCREATE.gif" alt="Video Creation " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/COMPETITORANALYSIS.gif" alt="Competitor Analysis " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PACKAGEMANAGE.gif" alt="Solution Package Management " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRODANALYSIS.gif" alt="Product Analysis " draggable="false" height="150px" width="150px" >
 </div>
 </div>
 
@@ -670,7 +661,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE/SANSYS.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/SANSYS.png" alt="Sansys Business Solutions" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> Sansys&nbsp;Business&nbsp;Solutions </h><br>
 <h class="h22"><b> ஃப்ரீலான்ஸ் &nbsp;உள்ளடக்க &nbsp;எழுத்தாளர்</b></h><br>
 <p class="h23"> டிசம்பர் &nbsp;2022 &nbsp;- &nbsp;மார்ச் &nbsp;2023 &nbsp;(&nbsp;4 &nbsp;மாதங்கள்&nbsp;)  </p><br>
@@ -683,12 +674,12 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS/BLOG.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/ARTICLE.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/PRESS.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/CASESTUDY.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/PRODFEAT.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/WEBCONT.gif" draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/BLOG.gif" alt="Blog Writing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/ARTICLE.gif" alt="Article Writing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRESS.gif" alt="Press Release Writing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/CASESTUDY.gif" alt="Case Studies Writing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/PRODFEAT.gif" alt="Copy Writing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/WEBCONT.gif" alt="Website content Writing " draggable="false" height="150px" width="150px" >
 </div>
 </div>
   
@@ -788,7 +779,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE/CDS.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/CDS.png" alt="CAP Digisoft Solutions" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> CAP &nbsp;Digisoft &nbsp;Solutions, &nbsp;Inc</h><br>
 <h class="h22"><b> தரவு &nbsp;மற்றும் &nbsp;ஆவண &nbsp;ஆய்வாளர்</b></h><br>
 <p class="h23"> ஆகஸ்ட் &nbsp;2021 &nbsp;- &nbsp;அக்டோபர் &nbsp;2022 &nbsp;(&nbsp;1 வருடம் &nbsp;3 மாதங்கள்&nbsp;) </p><br>
@@ -801,13 +792,13 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS/EXCEL.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS/DATACLEANSING.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS/LEADGEN.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS/MARKETING.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS/MR.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS/ES.gif" draggable="false" height="150px" width="150px" >   
-<img src="EXPSUMICONS/MEDBILL.gif" draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/EXCEL.gif" alt="Data Analysis " draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/DATACLEANSING.gif" alt="Data Cleansing " draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/LEADGEN.gif" alt="Lead Generation " draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/MARKETING.gif" alt="Digital Marketing " draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/MR.gif" alt="Medical Record Analysis " draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/ES.gif" alt="Electronic Sorting " draggable="false" height="150px" width="150px" >   
+<img src="EXPSUMICONS/MEDBILL.gif" alt="Medical Bill Validation " draggable="false" height="150px" width="150px" >   
 </div>
 </div>
 
@@ -905,7 +896,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 
 <center>
-<img src="JOB EXPERIENCE/PSG.png" draggable="false" width="250px" height="250px"><br><br>
+<img src="JOB EXPERIENCE/PSG.png" alt="PSG Hospital" draggable="false" width="250px" height="250px"><br><br>
 <h class="h21"> PSG &nbsp;Hospital </h><br>
 <h class="h22"><b> மருந்தகம் &nbsp;மற்றும் &nbsp;மருத்துவ &nbsp;பதிவு &nbsp;உதவியாளர்</b></h><br>
 <p class="h23"> (2017 – 2018) </p><br>
@@ -918,13 +909,13 @@ table.FULL {border-spacing: 10px;}
 <center>
 <div class="expimages">
 <div class="image-list">
-<img src="EXPSUMICONS/DRUGS.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS/MEDEQUIP1.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/MEDEQUIP2.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/MEDEQUIP3.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS/MEDBILL.gif" draggable="false" height="150px" width="150px" >
-<img src="EXPSUMICONS/ES.gif" draggable="false" height="150px" width="150px" > 
-<img src="EXPSUMICONS/MRHARD.gif" draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/DRUGS.gif" alt="Drugs Management " draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/MEDEQUIP1.gif" alt="Medical Equipments Management " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MEDEQUIP2.gif" alt="Medical Equipments Management " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/MEDEQUIP3.gif" alt="Medical Equipments Management " draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/MEDBILL.gif" alt="Medical Billing " draggable="false" height="150px" width="150px" >
+<img src="EXPSUMICONS/ES.gif" alt="Pharmacy Assistance " draggable="false" height="150px" width="150px" > 
+<img src="EXPSUMICONS/MRHARD.gif" alt="Medical Record Management " draggable="false" height="150px" width="150px" > 
 
 </div>
 </div>
@@ -1023,7 +1014,7 @@ table.FULL {border-spacing: 10px;}
 
 <div id="PARTTIME" class="tabcontent">
 
-<img class="TABICON" src="TABS/UNOFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/UNOFFICIALJOB.gif" draggable="false" width="140px" height="140px" style="float: right; transform: rotateY(180deg);"><br><br><br>
+<img class="TABICON" src="TABS/UNOFFICIALJOB.gif" alt=" Part Time Job" draggable="false" width="140px" height="140px" style="float: left;"> <img class="TABICON" src="TABS/UNOFFICIALJOB.gif" alt=" Part Time Job" draggable="false" width="140px" height="140px" style="float: right; transform: rotateY(180deg);"><br><br><br>
 &nbsp;&nbsp;<center><h class="h12"><b>என் &nbsp;பகுதிநேர &nbsp;வேலை &nbsp;அனுபவம்  </b></h></center>&nbsp;&nbsp;
 <br>
 <br>
@@ -1034,7 +1025,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS/ELECTRICALSWITCHASSEMBLER.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/ELECTRICALSWITCHASSEMBLER.png" alt=" Electrician" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> மின் &nbsp;சுவிட்ச் &nbsp;அசெம்பிளர்  </h><br>
 <br>
 <br>
@@ -1049,7 +1040,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS/TUTOR.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/TUTOR.png" alt=" Home Tution Teacher" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> பயிற்சி &nbsp;ஆசிரியர் </h><br>
 <br>
 <br>
@@ -1067,7 +1058,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS/FOOD DELIVERY MAN.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/FOOD DELIVERY MAN.png" alt=" Food Delivery Partner" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> உணவு &nbsp;விநியோக &nbsp;ஊழியர்  </h><br>
 <br>
 <br>
@@ -1082,7 +1073,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS/BUILDING CONSTRUCTION SUPERVISOR.png" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS/BUILDING CONSTRUCTION SUPERVISOR.png" alt="Supervisor " draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> கட்டிட &nbsp;மேற்பார்வையாளர்  </h><br>
 <br>
 <br>
@@ -1162,7 +1153,7 @@ table.FULL {border-spacing: 10px;}
 </div>        
 
 <div class="center-content">
-<center><img class="FLOGOIMG" src="LOGO/VISHNUPEDIA LOGO.png" alt="RVK, Raj. Vishnu Kumar, RVK Adventurer, Vishnupedia, Vishnu Kumar, விஷ்ணு குமார், விஷ்ணுபீடியா" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
+<center><img class="FLOGOIMG" src="LOGO/VISHNUPEDIA LOGO.png" alt="Vishnupedia Logo" draggable="false" width="500" height="250" style="box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.5); display: block;"/></center>
 </div>
 
 <div class="right-content">  
