--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 <html lang="ta">
 <head>
-<title>விஷ்ணுபீடியா</title>
+<title>விஷ்ணுபீடியா | அறிமுகம் </title>
 
 <meta charset="UTF-8">
-<meta property="og:title" content="விஷ்ணுபீடியா">
+<meta property="og:title" content="விஷ்ணுபீடியா | அறிமுகம்">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
 <meta name="description" content="விஷ்ணுபீடியா என்பது ராஜ் விஷ்ணு குமாரின் வாழ்க்கை பயணத்தின் சிறு தொகுப்பு. இதில் அவரது பயணம், திறன்கள், கல்வி, அனுபவம், காலக்கோடு மற்றும் விருப்பங்களை காணலாம்.">
 <meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
@@ -2115,4 +2115,5 @@ audios[i].pause();
 </body>
 
 </html>
+
 
