--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,10 @@
 
 <html lang="ta">
 <head>
-<title>விஷ்ணுபீடியா</title>
+<title>விஷ்ணுபீடியா | அறிவும் திறனும்</title>
 
 <meta charset="UTF-8">
-<meta property="og:title" content="விஷ்ணுபீடியா">
+<meta property="og:title" content="விஷ்ணுபீடியா | அறிவும் திறனும்">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
 <meta name="description" content="விஷ்ணுபீடியாவின் புகைப்படப் பக்கத்தில் ராஜ் விஷ்ணு குமாரின் அற்புதமான படங்கள் மற்றும் வீடியோக்களைக் காணலாம்.">
 <meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
@@ -734,4 +734,5 @@ let players = [];
 </body>
 
 </html>
+
 
