--- a/career.html
+++ b/career.html
@@ -1,10 +1,10 @@
 
 <html lang="ta">
 <head>
-<title>விஷ்ணுபீடியா</title>
+<title>விஷ்ணுபீடியா | அனுபவம்</title>
 
 <meta charset="UTF-8">
-<meta property="og:title" content="விஷ்ணுபீடியா">
+<meta property="og:title" content="விஷ்ணுபீடியா | அனுபவம்">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
 <meta name="description" content="விஷ்ணுபீடியாவின் அனுபவப் பக்கத்தில் ராஜ் விஷ்ணு குமாரின் பகுதிநேர வேலை அனுபவம் மற்றும் முழுநேர வேலை அனுபவத்தைக் காணலாம்.">
 <meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
@@ -1227,4 +1227,5 @@ document.getElementById("defaultOpen").click();
 </body>
 
 </html>
+
 
