--- a/knowledge.html
+++ b/knowledge.html
@@ -1,10 +1,10 @@
 
 <html lang="ta">
 <head>
-<title>விஷ்ணுபீடியா</title>
+<title>விஷ்ணுபீடியா | அறிவும் திறனும்</title>
 
 <meta charset="UTF-8">
-<meta property="og:title" content="விஷ்ணுபீடியா">
+<meta property="og:title" content="விஷ்ணுபீடியா | அறிவும் திறனும்">
 <meta property="og:description" content="விஷ்ணுவின் சிறு வாழ்க்கை வரலாறு">
 <meta name="description" content="விஷ்ணுபீடியாவின் அறிவும் திறனும் பக்கத்தில் ராஜ் விஷ்ணு குமாரின் கல்வித் தகுதி, கணினி பயன்பாடுகள் அறிவு மற்றும் திறன்களைக் காணலாம்.">
 <meta property="og:image" content="https://vishnupedia.github.io/tamil/LOGO/VISHNUPEDIA1.jpg">
@@ -1263,4 +1263,5 @@ document.getElementById("defaultOpen").click();
 </body>
 
 </html>
+
 
