--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,7 @@
 
 <link rel="apple-touch-icon" sizes="180x180" href="LOGO/FAVICON.png">
 <link rel="icon" href="LOGO/FAVICON.ico" type="image/x-icon">
+<link rel="canonical" href="https://vishnupedia.github.io/tamil/gallery.html">
 
 
 <style>
@@ -734,6 +735,7 @@ let players = [];
 </body>
 
 </html>
+
 
 
 
