--- a/career.html
+++ b/career.html
@@ -18,6 +18,7 @@
         
 <link rel="apple-touch-icon" sizes="180x180" href="LOGO/FAVICON.png">
 <link rel="icon" href="LOGO/FAVICON.ico" type="image/x-icon">
+<link rel="canonical" href="https://vishnupedia.github.io/tamil/career.html">
 
 
 <style>
@@ -1227,5 +1228,6 @@ document.getElementById("defaultOpen").click();
 </body>
 
 </html>
+
 
 
