--- a/knowledge.html
+++ b/knowledge.html
@@ -19,6 +19,7 @@
         
 <link rel="apple-touch-icon" sizes="180x180" href="LOGO/FAVICON.png">
 <link rel="icon" href="LOGO/FAVICON.ico" type="image/x-icon">
+<link rel="canonical" href="https://vishnupedia.github.io/tamil/knowledge.html">
 
 
 <style>
@@ -1263,5 +1264,6 @@ document.getElementById("defaultOpen").click();
 </body>
 
 </html>
+
 
 
