--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ h2 { position: absolute; left: -9999px;}
 <br>
 <br>
 
-<center><h class="h2"><b>என்  &nbsp;பெற்றோர்</b></h></center>
+<center><h class="h2"><b>என்  &nbsp;தந்தை</b></h></center>
 
 <br>
 <br>
@@ -580,27 +580,6 @@ h2 { position: absolute; left: -9999px;}
 
 </tr>
 </table>
-
-<br>
-<br>
-
-<table class="JOURNEY">
-<tr>
-
-<td class="W60">
-<p class="p2"><b>என்  தாய், &nbsp; திருமதி ரா. மணி மேகலை</b>, கோயம்புத்தூரில் பிறந்தவர், கோவையை பூர்வீகமாகக் கொண்டவர். அவரது தந்தை (என் தாத்தா)  பள்ளி கல்வி முடித்து ஒரு சிறந்த அரசியல்வாதியாக இருந்தார், மற்றும் அவரது அம்மா (என் பாட்டி) விவசாயத்தையும், வீட்டு விலங்குகளை கவனித்து வந்தார். என்  தாய் பள்ளி கல்வியை முழுமையாக முடித்தவர், பூ அலங்காரம், பிளாஸ்டிக் கூடைகளை உருவாக்குதல், தையல் வேலை, ஆரம்ப பள்ளி மாணவர்களுக்கு கல்வி கற்பித்தல் போன்றவற்றில் திறமையானவர்.
-<br> 
-என் அப்பாவும் அம்மாவும் உறவினர்கள் என்பதால், அவர்கள் ஒருவரையொருவர் காதலித்து, எங்கள் தாத்தா, பாட்டியின் ஒப்புதலுடன், அவர்கள் திருமணம் செய்து கொண்டனர்.
-</p>
-</td>
-
-<td>
-<center><img class="JIMG" src="JOURNEYPICS/APPAAMMA.jpeg" alt="Raj Vishnu Kumar Parents" draggable="false" height="400px" width="400px" ></center>
-</td>
-
-</tr>
-</table>
-
 
 <br>
 <br>
@@ -2115,5 +2094,6 @@ audios[i].pause();
 </body>
 
 </html>
+
 
 
