--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ h2 { position: absolute; left: -9999px;}
 </td>
 
 <td class="W60">
-<p class="p2">நான் &nbsp;<b>ஜனவரி 23, 1999</b>&nbsp; அன்று கோவையில் பிறந்தேன். என் <b>தந்தை</b> ஒரு &nbsp;ME&nbsp; மற்றும் &nbsp;MBA&nbsp; பட்டதாரி, அவர் ஒரு தொழிலதிபராக இருந்தார், மேலும் பள்ளிப்படிப்பை முடித்த என் <b> தாய்</b> எங்கள் அழகான குடும்பத்தையும் வீட்டையும் கவனித்துக்கொள்கிறார். நான் என் தந்தையின் வழியைப் பின்பற்றி வளர்ந்தேன், அவருடைய பல்துறை அறிவு மற்றும் என் தாயின் ஆழ்ந்த கவனிப்பால் வளர்ந்தவன். நான் இயற்கை, சைக்கிள் ஓட்டுதல் மற்றும் பைக் ஓட்டுதலை அதிகம் விரும்புபவன்.
+<p class="p2">நான் &nbsp;<b>ஜனவரி 23, 1999</b>&nbsp; அன்று கோவையில் பிறந்தேன். என் <b>தந்தை</b> ஒரு &nbsp;ME&nbsp; மற்றும் &nbsp;MBA&nbsp; பட்டதாரி, அவர் ஒரு தொழிலதிபராக இருந்தார். நான் என் தந்தையின் வழியைப் பின்பற்றி வளர்ந்தேன். நான் இயற்கை, சைக்கிள் ஓட்டுதல் மற்றும் பைக் ஓட்டுதலை அதிகம் விரும்புபவன்.
 </p>
 </td>
 
@@ -2094,6 +2094,7 @@ audios[i].pause();
 </body>
 
 </html>
+
 
 
 
